--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,7 @@
 cmake_minimum_required(VERSION 3.10)
 project(dormamu)
 set(SOURCE main.cpp)
-add_executable(dormamu ${SOURCE})
+MESSAGE ("PROJECT : " ${CMAKE_PROJECT_NAME} )
+SET ( CMAKE_VERBOSE_MAKEFILE true )
+add_executable(main ${SOURCE})
+add_executable(request request.cpp)
