기능구현 중간저장

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.10)
 project(dormamu)
-set(SOURCE main.cpp)
+set(SOURCE main.c)
 MESSAGE ("PROJECT : " ${CMAKE_PROJECT_NAME} )
 SET ( CMAKE_VERBOSE_MAKEFILE true )
 add_executable(main ${SOURCE})
-add_executable(request request.cpp)
+add_executable(http_client http_client.c)
