와이씨.. 이거 https 통신 c 언어로 하는건 좀 아닌듯.. 삽질하다 포기함

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,5 +3,9 @@ project(dormamu)
 set(SOURCE main.c)
 MESSAGE ("PROJECT : " ${CMAKE_PROJECT_NAME} )
 SET ( CMAKE_VERBOSE_MAKEFILE true )
+
+find_package(OpenSSL REQUIRED)
+include_directories(${OPENSSL_INCLUDE_DIR})
+
 add_executable(main ${SOURCE})
 add_executable(http_client http_client.c)
